package l3s6.projet.star.interaction;

public interface GameListener {

    public void update(String message);

}
