package l3s6.projet.star.interaction.command;

public class InvalidArgumentNumberException extends Exception {
    public InvalidArgumentNumberException(String message) {
        super(message);
    }
}
